@@ -3,7 +3,7 @@
  * 
  * $Id$
  * 
- * Copyright (c) 1991-2003 Francois Felix Ingrand.
+ * Copyright (c) 1991-2005 Francois Felix Ingrand.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -35,6 +35,7 @@
 #ifndef INCLUDE_slistPack_pub
 #define INCLUDE_slistPack_pub
 
+typedef char (*SL_PFC)();	/* pointer to func returning int */
 typedef int (*SL_PFI)();	/* pointer to func returning int */
 typedef void *(*SL_PFPV)(); /* pointer to func taking void * returning void * */
 
