@@ -2,7 +2,7 @@ static const char* const rcsid = "$Id$";
 /*                               -*- Mode: C -*- 
  * oprs-pred.c -- 
  * 
- * Copyright (c) 1991-2003 Francois Felix Ingrand.
+ * Copyright (c) 1991-2005 Francois Felix Ingrand.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -87,7 +87,7 @@ int hash_a_string_pred_func(PString name )
 PBoolean match_pred_func(PString s1, Pred_Func_Rec *pfr)
 /* their names are registered ID */
 {
-     return ( s1 == pfr->name) ;
+     return ( s1 == pfr->name ) ;
 }
 
 
